--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@sentry/react": "^10.32.1",
+    "@unpic/react": "^1.0.2",
     "animejs": "^3.2.2",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.28",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.372.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^2.2.2"
   },
